app/assets/stylesheets/partials/layout/_header.scss
/* ======================================================================================
   @LAYOUT -> HEADER
   ====================================================================================== */

/* Set variables */
$hero-banner-height-sml: 270 !default;
$hero-banner-height-lrg: 380 !default;

/* Start header */
.header {
	position: fixed;
	z-index: 99;
	width: 100%;
	border-bottom: 1px solid #bababa;

	/* Non JS users + toggle `position: fixed` via the jQuery toggle menu/search plugin */
	//&.is-header-unfixed,
	.no-js & {position: static;}

	/* Centre home page hero banner */
	&.is-header-hero {position: relative;}

	/* --Global rules-- */

	/* Icons */
	.icon:before {@extend %transition-subtle;}

	/* --Shared rules-- */

	/* Set common colours */
	a,
	.icon:before,
	.my-account-container__hdr.btn {color: $color-light-txt;}

	.icon--arrow-down-full:before {color: $color-dark-txt;}
}

	/* --Header secondary-- */
	.header__secondary {
		background-color: #fff;
		box-shadow: 0 0 3px rgba(#000, 0.4);
		position: relative;
		z-index: 2;
		@extend %clear-fix;
		@include to-rem(min-height, 44);

		/* Centre home page hero banner */
		.is-header-hero & {box-shadow: none;}

		/* Increase min height at this breakpoint */
		@include respond-min($non-palm) {
			@include to-rem(min-height, 50);

			/* Overlay the centre home page hero banner at this breakpoint */
			.is-header-hero & {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				@include to-rem(min-height, $hero-banner-height-sml);
				background: transparent;

				/* Increase min height at this breakpoint */
				@include respond-min($ipad-portrait) {
					@include to-rem(min-height, $hero-banner-height-lrg);
				}

					/* Shared rules */
					a,
					.icon:before,
					.my-account-container__hdr.btn {color: #fff;}
			}
		}

		/* Inner container */
		> .container {
			@include to-rem(padding-top, 7);

			/* Change positioning context and increase top padding at this breakpoint */
			@include respond-min($non-palm) {
				position: relative;
				@include to-rem(padding-top, 10);

				/* Apply min height and top padding for centre home page hero banner */
				.is-header-hero & {
					@include to-rem(padding-top, $spacing-base);
					@include to-rem(min-height, $hero-banner-height-sml);

					/* Increase min height and top padding at this breakpoint */
					@include respond-min($ipad-portrait) {
						@include to-rem(padding-top, $spacing-base + $spacing-half);
						@include to-rem(min-height, $hero-banner-height-lrg);
					}
				}
			}

			/* Make room for the sub nav menu toggle btn at this breakpoint range */
			@include respond-range($non-palm, $ipad-landscape - 1) {
				@include to-rem(padding-left, 32);

				/* Remove left padding for 'Centre home page hero banner' and 'non JS users' */
				.no-js &,
				.is-header-hero & {padding-left: 0;}
			}

			/* Non JS users */
			.no-js & {@include to-rem(padding-bottom, 6);}
		}
	}

		/* Logo */
		.logo {

			/* Increase logo size and swap out for white version for 'Centre home page hero banner' at this breakpoint */
			@include respond-min($non-palm) {
				.is-header-hero & {
					background: image-url("logo-white.svg") no-repeat 0 0;
					display: inline-block;
					width: 126px;
					height: 41px;

					/* No SVG fallback */
					.no-svg & {background-image: image-url("logo-white.png");}
				}
			}

			img {
				width: 82px;
				height: 26px;
				position: relative;
				@include to-rem(top, $spacing-micro);
				vertical-align: top;

				/* Decrease top indent at this breakpoint */
				@include respond-min($non-palm) {
					@include to-rem(top, 1);

					/* Hide for 'Centre home page hero banner' at this breakpoint */
					.is-header-hero & {@include hide-visually;}
				}
			}

		}

		/* --Toggle menu/search via jQuery-- */
		.js .js-menu-toggle,
		.js .js-search-toggle {

			/* Hide */
			display: none;
			width: 100%;

			/* Show */
			&.is-expanded {
				display: block;
				position: absolute;
				z-index: $z-index-max;
				top: 100%;
				left: 0;
			}
		}

		/* Search expanded */
		.js .js-search-toggle.is-expanded {top: 0;}

		/* Always show at this breakpoint */
		@include respond-min($non-palm) {
			.js .header .js-menu-toggle,
			.js .header .js-search-toggle {
				display: inline-block;
				width: auto;
			}

			.js .header .js-menu-toggle {position: static;}

			.js .header .js-search-toggle {
				position: absolute;
				left: auto;
			}
		}

		/* Toggle menu */
		.header-menu-toggle {

			/* Apply colours at this breakpoint */
			@include respond-max($palm) {
				background-color: $color-dark-txt;
				color: #fff;
				/* Make menu scrollable */
				height: 330px;
				overflow: auto;

				/* Create bottom spacing */
				.header-menu-toggle__mrg-btm {@include to-rem(margin-bottom, $spacing-half);}
			}

			/* Non JS users */
			.no-js & {
				@include to-rem(margin-top, $spacing-half);

				/* Bring inline at this breakpoint */
				@include respond-min($ipad-landscape) {
					display: inline-block;
					margin-top: 0;
				}
			}
		}
/* ... */

